<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Android XR-only defaults. Session-specific overrides are edited in Full Space. -->
    <PreferenceCategory
        android:key="category_video_settings"
        android:title="@string/category_xr_streaming_defaults">

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="3840x2160"
            android:entries="@array/xr_resolution_names"
            android:entryValues="@array/xr_resolution_values"
            android:key="list_resolution"
        android:icon="@drawable/ic_xr_resolution"
            android:summary="@string/summary_resolution_list"
            android:title="@string/title_resolution_list"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="full"
            android:entries="@array/xr_raw_sbs_per_eye_resolution_names"
            android:entryValues="@array/xr_raw_sbs_per_eye_resolution_values"
            android:key="list_raw_sbs_per_eye_resolution"
        android:icon="@drawable/ic_xr_resolution"
            android:summary="@string/summary_raw_sbs_per_eye_resolution"
            android:title="@string/title_raw_sbs_per_eye_resolution"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="90"
            android:entries="@array/xr_fps_names"
            android:entryValues="@array/xr_fps_values"
            android:key="list_fps"
        android:icon="@drawable/ic_xr_frame_rate"
            android:summary="@string/summary_fps_ceiling"
            android:title="@string/title_fps_ceiling"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.BitrateLadderPreference
            android:defaultValue="200000"
            android:key="seekbar_bitrate_kbps"
        android:icon="@drawable/ic_xr_bitrate"
            android:summary="@string/summary_bitrate_ceiling"
            android:title="@string/title_bitrate_ceiling"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="checkbox_enable_hdr"
        android:icon="@drawable/ic_xr_hdr"
            android:summary="@string/summary_enable_hdr"
            android:title="@string/title_enable_hdr"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="checkbox_full_range"
        android:icon="@drawable/ic_xr_video_range"
            android:summary="@string/summary_full_range"
            android:title="@string/title_full_range"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="forceh265"
            android:entries="@array/xr_video_format_names"
            android:entryValues="@array/xr_video_format_values"
            android:key="video_format"
        android:icon="@drawable/ic_xr_codec"
            android:summary="@string/summary_video_format"
            android:title="@string/title_video_format"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="latency"
            android:entries="@array/xr_video_frame_pacing_names"
            android:entryValues="@array/xr_video_frame_pacing_values"
            android:key="frame_pacing"
        android:icon="@drawable/ic_xr_frame_pacing"
            android:summary="@string/summary_frame_pacing"
            android:title="@string/title_frame_pacing"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="depth-anything-v2-small-static-performance"
            android:entries="@array/xr_client_sbs_depth_model_names"
            android:entryValues="@array/xr_client_sbs_depth_model_values"
            android:key="list_client_sbs_depth_model"
        android:icon="@drawable/ic_xr_depth_model"
            android:summary="@string/summary_client_sbs_depth_model"
            android:title="@string/title_client_sbs_depth_model"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_xr_audio_input"
        android:title="@string/category_xr_audio_input">

        <com.limelight.preferences.InlineListPreference
            android:defaultValue="2"
            android:entries="@array/xr_audio_config_names"
            android:entryValues="@array/xr_audio_config_values"
            android:key="list_audio_config"
        android:icon="@drawable/ic_xr_audio"
            android:summary="@string/summary_audio_config_list"
            android:title="@string/title_audio_config_list"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_host_audio"
        android:icon="@drawable/ic_xr_audio"
            android:summary="@string/summary_checkbox_host_audio"
            android:title="@string/title_checkbox_host_audio"
            app:iconSpaceReserved="false" />

        <com.limelight.preferences.SeekBarPreference
            android:defaultValue="5"
            android:key="seekbar_deadzone"
        android:icon="@drawable/ic_xr_gamepad"
            android:max="20"
            android:summary="@string/summary_seekbar_deadzone"
            android:text="@string/suffix_seekbar_deadzone"
            android:title="@string/title_seekbar_deadzone"
            app:iconSpaceReserved="false"
            app:xrMin="-20" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="checkbox_enable_rumble"
        android:icon="@drawable/ic_xr_gamepad"
            android:summary="@string/summary_enable_rumble"
            android:title="@string/title_enable_rumble"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_flip_face_buttons"
        android:icon="@drawable/ic_xr_gamepad"
            android:summary="@string/summary_checkbox_flip_face_buttons"
            android:title="@string/title_checkbox_flip_face_buttons"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_gamepad_touchpad_as_mouse"
        android:icon="@drawable/ic_xr_mouse"
            android:summary="@string/summary_checkbox_gamepad_touchpad_as_mouse"
            android:title="@string/title_checkbox_gamepad_touchpad_as_mouse"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="checkbox_mouse_emulation"
        android:icon="@drawable/ic_xr_mouse"
            android:summary="@string/summary_checkbox_mouse_emulation"
            android:title="@string/title_checkbox_mouse_emulation"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_absolute_mouse_mode"
        android:icon="@drawable/ic_xr_mouse"
            android:summary="@string/summary_checkbox_absolute_mouse_mode"
            android:title="@string/title_checkbox_absolute_mouse_mode"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_mouse_local_cursor"
        android:icon="@drawable/ic_xr_mouse"
            android:summary="@string/summary_checkbox_mouse_local_cursor"
            android:title="@string/title_checkbox_mouse_local_cursor"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="checkbox_smart_clipboard_sync"
        android:icon="@drawable/ic_xr_clipboard"
            android:summary="@string/summary_smart_clipboard_sync"
            android:title="@string/title_smart_clipboard_sync"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="checkbox_smart_clipboard_sync"
            android:key="checkbox_hide_clipboard_content"
        android:icon="@drawable/ic_xr_clipboard"
            android:summary="@string/summary_hide_clipboard_content"
            android:title="@string/title_hide_clipboard_content"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_xr_general"
        android:title="@string/category_xr_general">

        <com.limelight.preferences.LanguagePreference
            android:defaultValue="default"
            android:entries="@array/language_names"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_language"
            android:key="list_languages"
            android:summary="@string/summary_language_list"
            android:title="@string/title_language_list" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_xr_diagnostics"
        android:title="@string/category_xr_diagnostics">

        <SwitchPreferenceCompat
            android:defaultValue="@bool/default_enable_perf_logging"
            android:key="checkbox_enable_perf_logging"
        android:icon="@drawable/ic_xr_diagnostics"
            android:summary="@string/summary_checkbox_enable_perf_logging"
            android:title="@string/title_checkbox_enable_perf_logging"
            app:iconSpaceReserved="false" />

        <Preference
            android:dependency="checkbox_enable_perf_logging"
            android:key="share_performance_logs"
        android:icon="@drawable/ic_xr_share"
            android:summary="@string/summary_share_performance_logs"
            android:title="@string/title_share_performance_logs_button"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_debug_info"
        android:icon="@drawable/ic_xr_dump"
            android:summary="@string/summary_debug_info"
            android:title="@string/title_debug_info"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
